# Web-Blog

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  seed_posts.py
blog/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_options.py  0003_alter_post_slug.py  0004_comment.py  0005_post_tags.py
blog/templates/: pagination.html
blog/templates/blog/: base.html  pagination.html
blog/templates/blog/post/: detail.html  list.html  search.html  share.html
blog/templates/blog/post/includes/: comment_form.html
blog/templatetags/: blog_tags.py
mysite/: settings.py  urls.py
static/css/: blog.css
static/js/: blog.js
